[package]
name = "prometrics"
version = "0.1.11"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "Client library for exposing prometheus metrics"
homepage = "https://github.com/sile/prometrics"
repository = "https://github.com/sile/prometrics"
readme = "README.md"
keywords = ["prometheus", "metrics"]
license = "MIT"

[badges]
travis-ci = {repository = "sile/prometrics"}
codecov = {repository = "sile/prometrics"}

[dependencies]
atomic_immut = "0.1"
lazy_static = "1"
trackable = "0.2"

[target.'cfg(target_os="linux")'.dependencies]
libc = "0.2"
procinfo = "0.4"
